Add cart toast notifications and improved cart icon

--- a/nerin_final_updated/frontend/checkout-form.html
+++ b/nerin_final_updated/frontend/checkout-form.html
@@ -274,6 +274,7 @@
         }
       }
     </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   </head>
   <body>
     <main class="container">
@@ -396,6 +397,7 @@
     <div class="loading-overlay" id="loading"><div class="spinner"></div></div>
     <script type="module" src="/js/checkout-form.js"></script>
     <!-- Configuración global y navegación -->
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
   </body>
 </html>
