--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -8,6 +8,7 @@
     />
     <title>NERIN Repuestos – Pantallas originales</title>
     <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   </head>
   <body>
     <header>
@@ -106,6 +107,7 @@
     </div>
     <!-- Configuración y analíticas -->
     <script type="module" src="/js/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
   </body>
 </html>
