--- a/nerin_final_updated/frontend/login.html
+++ b/nerin_final_updated/frontend/login.html
@@ -8,6 +8,7 @@
     />
     <title>NERIN – Acceder</title>
     <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   </head>
   <body>
     <header>
@@ -49,6 +50,7 @@
     <!-- Importamos el código como módulo -->
     <script type="module" src="/js/login.js"></script>
     <!-- Configuración y analíticas globales -->
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
   </body>
 </html>
