--- a/nerin_final_updated/frontend/account.html
+++ b/nerin_final_updated/frontend/account.html
@@ -8,6 +8,7 @@
     />
     <title>Mi cuenta – NERIN</title>
     <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   </head>
   <body>
     <header>
@@ -135,6 +136,7 @@
       </section>
     </main>
     <script type="module" src="/js/account.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
   </body>
 </html>
