--- a/nerin_final_updated/frontend/cart.html
+++ b/nerin_final_updated/frontend/cart.html
@@ -8,6 +8,7 @@
     />
     <title>NERIN – Carrito</title>
     <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   </head>
   <body>
     <header class="simple-header">
@@ -42,6 +43,7 @@
     </div>
     <script type="module" src="/js/cart.js"></script>
     <!-- Configuración y analíticas globales -->
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
   </body>
 </html>
