--- a/nerin_final_updated/frontend/invoice.html
+++ b/nerin_final_updated/frontend/invoice.html
@@ -45,6 +45,7 @@
         cursor: pointer;
       }
     </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   </head>
   <body>
     <header>
@@ -68,6 +69,7 @@
     </main>
     <script type="module" src="/js/invoice.js"></script>
     <!-- Configuración y analíticas globales para actualizar navegación -->
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
   </body>
 </html>
