--- a/nerin_final_updated/frontend/product.html
+++ b/nerin_final_updated/frontend/product.html
@@ -8,6 +8,7 @@
     />
     <title>Detalle de producto – NERIN</title>
     <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   </head>
   <body>
     <header>
@@ -33,6 +34,7 @@
     </div>
     <script type="module" src="/js/product.js"></script>
     <!-- Configuración y analíticas globales -->
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
   </body>
 </html>
