--- a/nerin_final_updated/frontend/register.html
+++ b/nerin_final_updated/frontend/register.html
@@ -8,6 +8,7 @@
     />
     <title>Registrarse – NERIN</title>
     <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   </head>
   <body>
     <header>
@@ -62,6 +63,7 @@
     </main>
     <script type="module" src="/js/register.js"></script>
     <!-- Configuración global -->
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
   </body>
 </html>
