--- a/nerin_final_updated/frontend/shop.html
+++ b/nerin_final_updated/frontend/shop.html
@@ -8,6 +8,7 @@
     />
     <title>NERIN – Tienda</title>
     <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   </head>
   <body>
     <header>
@@ -49,6 +50,7 @@
     <!-- Importamos el código como módulos ES para poder usar import/export -->
     <script type="module" src="/js/shop.js"></script>
     <!-- Configuración y analíticas globales -->
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
   </body>
 </html>
