Add order tracking feature

--- a/nerin_final_updated/emails/orderPaid.html
+++ b/nerin_final_updated/emails/orderPaid.html
@@ -2,7 +2,8 @@
 <html>
   <body style="font-family: Arial, sans-serif">
     <h2>Gracias por tu compra</h2>
-    <p>Tu pago fue aprobado.</p>
+    <p>Número de orden: {{ORDER_ID}}</p>
+    <p>Podés consultar el estado de tu pedido en el siguiente enlace:</p>
     <p>
       <a
         href="{{ORDER_URL}}"
@@ -13,7 +14,7 @@
           border-radius: 4px;
           text-decoration: none;
         "
-        >Ver mi pedido</a
+        >Seguir mi pedido</a
       >
     </p>
   </body>
