Add order tracking links and enhance post-purchase page

--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -23,6 +23,7 @@
             <li><a href="/index.html">Inicio</a></li>
             <li><a href="/shop.html">Productos</a></li>
             <li><a href="/contact.html">Contacto</a></li>
+            <li><a href="/seguimiento.html">Seguir mi pedido</a></li>
             <li><a href="/cart.html">Carrito</a></li>
             <li><a href="/login.html">Acceder</a></li>
           </ul>
@@ -97,6 +98,7 @@
         <a href="https://instagram.com" target="_blank">Instagram</a> |
         <a href="/index.html">Inicio</a> | <a href="/shop.html">Catálogo</a> |
         <a href="/contact.html">Contacto</a> |
+        <a href="/seguimiento.html">Seguir mi pedido</a> |
         <a href="/terms.html">Términos y condiciones</a>
       </p>
       <p class="legal">
