--- a/nerin_final_updated/frontend/login.html
+++ b/nerin_final_updated/frontend/login.html
@@ -23,6 +23,7 @@
             <li><a href="/index.html">Inicio</a></li>
             <li><a href="/shop.html">Productos</a></li>
             <li><a href="/contact.html">Contacto</a></li>
+            <li><a href="/seguimiento.html">Seguir mi pedido</a></li>
             <li><a href="/cart.html">Carrito</a></li>
             <!-- Mantener el enlace de acceso para permitir que updateNav lo reemplace o conserve -->
             <li><a href="/login.html" class="active">Acceder</a></li>
