--- a/nerin_final_updated/frontend/shop.html
+++ b/nerin_final_updated/frontend/shop.html
@@ -23,6 +23,7 @@
             <li><a href="/index.html">Inicio</a></li>
             <li><a href="/shop.html" class="active">Productos</a></li>
             <li><a href="/contact.html">Contacto</a></li>
+            <li><a href="/seguimiento.html">Seguir mi pedido</a></li>
             <li><a href="/cart.html">Carrito</a></li>
             <li><a href="/login.html">Acceder</a></li>
           </ul>
