--- a/nerin_final_updated/frontend/invoice.html
+++ b/nerin_final_updated/frontend/invoice.html
@@ -60,6 +60,7 @@
             <li><a href="/index.html">Inicio</a></li>
             <li><a href="/shop.html">Productos</a></li>
             <li><a href="/contact.html">Contacto</a></li>
+            <li><a href="/seguimiento.html">Seguir mi pedido</a></li>
             <li><a href="/cart.html">Carrito</a></li>
             <!-- Enlace de acceso para login o cuenta; updateNav lo actualiza -->
             <li><a href="/login.html">Acceder</a></li>
